--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2"
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "viem": "^2.18.8",
+    "wagmi": "^2.12.2",
+    "@tanstack/react-query": "^5.51.21",
+    "@web3modal/wagmi": "^5.0.11"
   },
   "devDependencies": {
     "typescript": "^5",
