--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.14",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "viem": "^2.18.8",
-    "wagmi": "^2.12.2",
     "@tanstack/react-query": "^5.51.21",
-    "@web3modal/wagmi": "^5.0.11"
+    "@web3modal/wagmi": "^5.0.11",
+    "next": "14.2.14",
+    "pino-pretty": "^11.2.2",
+    "react": "^18",
+    "react-dom": "^18",
+    "viem": "^2.18.8",
+    "wagmi": "^2.12.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
