--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,20 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tanstack/react-query": "^5.51.21",
+    "@reown/appkit": "^1.0.7",
+    "@reown/appkit-adapter-wagmi": "^1.0.7",
+    "@semaphore-protocol/core": "4.0.3",
+    "@semaphore-protocol/data": "4.0.3",
+    "@semaphore-protocol/utils": "4.0.3",
+    "@tanstack/react-query": "^5.59.0",
     "@web3modal/wagmi": "^5.0.11",
+    "ethers": "^6.11.1",
     "next": "14.2.14",
     "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.18.8",
-    "wagmi": "^2.12.2",
-    "@semaphore-protocol/core": "4.0.3",
-    "@semaphore-protocol/data": "4.0.3",
-    "@semaphore-protocol/utils": "4.0.3",
-    "ethers": "^6.11.1"
+    "viem": "^2.21.18",
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
     "@types/node": "^20",
